# s21_tetris

./: .gitignore  CMakeLists.txt
code-samples/frogger/src/: backend.c  frogger.c
src/: Dockerfile  Doxyfile  Makefile  TODO.md  frontend.c  frontend.h  ncurses_supp.supp  tetris  tetris_bro  tetris_bro.c
src/brick_game/tetris/: tetris_bro.c
src/brick_game/tetris/debug/: front_debug.c  front_debug.h  fsm_debug.c  fsm_debug.h
src/brick_game/tetris/inc/: backend.h  defines.h  fsm.h  fsm_main.h  objects.h
src/brick_game/tetris/src/: backend.c  fsm.c  fsm_main.c
src/gui/cli/: frontend.c  frontend.h
src/misc/: doc.tex  doc_eng.tex
src/sandbox/: ncurses_gpt.c
src/sandbox/ncurses_tutorials/: tutor0.c
src/tests/: test.c
src/tetr/: tetris  tetris.c
src/tetris_src/: backend.c  backend.h  frontend.c  frontend.h  objects.h
src/tools/: BrickGame_checklist.md  test.c  test.py
